ZON-1341: Fix wrong margin

--- a/sass/web.site/advertorial/_headerimage.sass
+++ b/sass/web.site/advertorial/_headerimage.sass
@@ -1,5 +1,4 @@
 .header-image
-	margin-top: 10px
 	&__kicker
 		letter-spacing: 0
 		margin: 0 auto
